@@ -347,6 +347,9 @@ void mos_sys_ext(int32 swino, int32 inregs[], int32 outregs[], int32 xflag, int3
       }
 #endif
       break;
+    case SWI_Brandy_INTusesFloat:
+        matrixflags.int_uses_float = inregs[0];
+      break;
     case SWI_RaspberryPi_GPIOInfo:
       outregs[0]=matrixflags.gpio; outregs[1]=(matrixflags.gpiomem - basicvars.offbase);
       break;
