@@ -77,6 +77,7 @@ typedef struct {
 #define SWI_Brandy_GetVideoDriver			0x140002
 #define SWI_Brandy_SetFailoverMode			0x140003
 #define SWI_Brandy_AccessVideoRAM			0x140004
+#define SWI_Brandy_INTusesFloat				0x140005
 
 #define SWI_RaspberryPi_GPIOInfo			0x140100
 #define SWI_RaspberryPi_GetGPIOPortMode			0x140101
@@ -151,6 +152,7 @@ static switable swilist[] = {
 	{SWI_Brandy_GetVideoDriver,			"Brandy_GetVideoDriver"},
 	{SWI_Brandy_SetFailoverMode,			"Brandy_SetFailoverMode"},
 	{SWI_Brandy_AccessVideoRAM,			"Brandy_AccessVideoRAM"},
+	{SWI_Brandy_INTusesFloat,			"Brandy_INTusesFloat"},
 
 	{SWI_RaspberryPi_GPIOInfo,			"RaspberryPi_GPIOInfo"},
 	{SWI_RaspberryPi_GetGPIOPortMode,		"RaspberryPi_GetGPIOPortMode"},
